Top overflow fix

--- a/style.css
+++ b/style.css
@@ -73,10 +73,11 @@ body{
 
 .main-content{
     width: 100vw;
-    height: 90vh;
+    /*height: 100vh;*/
     display: flex;
     align-items: center;
     justify-content: center;
+    overflow: auto;
 }
 
 .home-view{
@@ -95,7 +96,7 @@ body{
     flex-direction: column;
     padding-left: 5vw;
     padding-right: 5vw;
-    padding-top: 30vh;
+    padding-top: 5vh;
     padding-bottom: 6vh;
 }
 
@@ -415,7 +416,7 @@ body{
     height: 100%;
     padding-left: 5vw;
     padding-right: 5vw;
-    padding-top: 40vh;
+    padding-top: 10vh;
     padding-bottom: 6vh;
 }
 
